Adedd stats and buttons to travel site

--- a/travel.html
+++ b/travel.html
@@ -11,14 +11,46 @@
     <link rel="stylesheet" href="/dist/css/app.min.css">
 </head>
 
-<body>
+<body class="travel">
     <div class="game-container">
         <h1 class="game-title">_Vanilla_RPG_</h1>
-        <div class="map">
+
+        <div class="table">
+
+            <div class="character">
+                <div class="character__info">
+                    <p class="character__info-item">Health:<span class="hp-stat"></span></p>
+                    <p class="character__info-item">Attack:<span class="atk-stat"></span></p>
+                    <p class="character__info-item">Defense:<span class="def-stat"></span></p>
+                    <p class="character__info-item">Level:<span class="lvl-stat"></span></p>
+                    <p class="character__info-item">Need Exp:<span class="xp-stat"></span></p>
+                </div>
+            </div>
+
+            <div class="map">
+
+            </div>
+
+            <div class="actions">
+                <div class="actions__travel">
+                    <button class="actions__travel__item">Hyperion</button>
+                    <button class="actions__travel__item">Nomedia</button>
+                    <button class="actions__travel__item">Genao</button>
+                </div>
+                <div class="actions__other">
+                    <button class="actions__other__item">Home</button>
+                    <button class="actions__other__item">Quests</button>
+                    <button class="actions__other__item">Inventory</button>
+                    
+                </div>
+            </div>
+
+            <div class="chat">
+
+            </div>
+
 
         </div>
-        .
-
     </div>
 
 
