Changes map from 5x5 to 8x6

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="home">
             <div class="home__hero">
                 <ul class="home__hero__list">
-                    <li class="home__hero__item">Health: <span class="hp-stat"></span></li>
+                    <li class="home__hero__item">Health: <span class="hp-stat"></span>/
+                    <span class="maxhp-stat"></span></li>
                     <li class="home__hero__item">Attack: <span class="atk-stat"></span></li>
                     <li class="home__hero__item">Defense: <span class="def-stat"></span></li>
                     <li class="home__hero__item">Level: <span class="lvl-stat"></span></li>
