--- a/travel.html
+++ b/travel.html
@@ -19,7 +19,8 @@
 
             <div class="table__character">
                 <ul class="table__character__info">
-                    <li class="table__character__info-item">Health: <span class="hp-stat"></span></li>
+                    <li class="table__character__info-item">Health: <span class="hp-stat"></span>/ <span
+                            class="maxhp-stat"></span></li>
                     <li class="table__character__info-item">Attack: <span class="atk-stat"></span></li>
                     <li class="table__character__info-item">Defense: <span class="def-stat"></span></li>
                     <li class="table__character__info-item">Level: <span class="lvl-stat"></span></li>
@@ -28,31 +29,7 @@
             </div>
 
             <div class="map">
-                <!-- <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div>
-                <div class="map-tile"></div> -->
+                <!-- .map-tile*48 -->
             </div>
 
             <div class="table__locations">
@@ -67,7 +44,7 @@
             <div class="table__menu">
                 <h2 class="table__menu__title">Menu</h2>
                 <div class="table__menu__box">
-                    <a href="/"  class="table__menu__box-item">Home</a>
+                    <a href="/" class="table__menu__box-item">Home</a>
                     <button class="table__menu__box-item">Inventory</button>
                     <button class="table__menu__box-item">Quests</button>
                 </div>
