Create function which generate map and player and enemies

--- a/travel.html
+++ b/travel.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="table__locations">
-                <h2 class="table__locations__title">Locations</h2>
+                <h2 class="table__locations__title">Maps</h2>
                 <div class="table__locations__box">
                     <button class="table__locations__box-item " id="hyperion-travel">Hyperion</button>
                     <button class="table__locations__box-item" id="nomedia-travel">Nomedia</button>
